ChangeLog for varconf
Friday, 21st November, 2003, Al Riddoch <alriddoch@zepler.org>
	* varconf/config.cpp, varconf/Config.h: Clean up accessing
	  config to use std::map::find() when apropriate. Add functions
	  to query and retrieve sections.

Sunday, 19th October, 2003, James Turner <james@worldforge.org>
	* Add ProjectBuilder project, which current relies on a
	  SigC++ 1.2 framework which I'll make available on
	  FTP if people poke me (it requires some source modifications)
	* Add __APPLE__ specific code to config.cpp, to deal with the
	  fact the C runtime doesn't export the 'environ' symbol to
	  dylibs (i.e, a framework build). The fix comes from Tcl, by
	  way of guile, and Google.

Saturday, 20th September, 2003, Ron Steinke <rsteinke@w-link.net>
	* Workaround for buggy win32 atof().

Thursday, 3rd July, 2003, Al Riddoch <alriddoch@zepler.org>
	* Update rpm spec to be cleaner, and make the technical sections
	  more generic.

Friday, 25th June, 2003, Al Riddoch <alriddoch@zepler.org>
	* Make test program a check_PROGRAMS, so its not compiled by default.

Monday, 2nd June, 2003, Al Riddoch <alriddoch@zepler.org>
	* Move to requiring sigc++ 1.2.
	* Move to pkgconfig completely.
	* varconf/config.cpp, varconf/variable.cpp: Fix a couple of warnings.
	* Increment version to 0.6.0, interface version 1.0.0 and release.

Friday, 17th April, 2003, Al Riddoch <alriddoch@zepler.org>
	* Fix up headers for clean handling, and portability.

Friday, 30th January, 2003, Al Riddoch <alriddoch@zepler.org>
	* Added mechanism to differentiate between varconf built
	  against sigc++ 1.0 and 1.2, and use pkg-config to
	  detect the 1.2 version.

Friday, 13th December, 2002, Michael Koch <konqueror@gmx.de>
	* Added manpage for varconf-config.

Monday, 2nd September, 2002, Al Riddoch <alriddoch@zepler.org>
	* Increment version to 0.5.4
	* Release 0.5.4

Sunday, 11th August, 2002, Ron Steinke <rsteinke@w-link.net>
	* Fixed Variable's copy constructor to work properly